@@ -5,20 +5,19 @@
     <parent>
         <groupId>org.sakaiproject</groupId>
         <artifactId>master</artifactId>
-        <version>2.10-SNAPSHOT</version>
+        <version>10.0-SNAPSHOT</version>
 		<relativePath>../master/pom.xml</relativePath>
     </parent>
 
     <name>sakai-portal base (neo)</name>
     <groupId>org.sakaiproject.portal</groupId>
-    <artifactId>portal-base</artifactId>
-    <version>2.10-SNAPSHOT</version>
+    <artifactId>portal</artifactId>
+    <version>10.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <modules>
         <module>editor-tool/tool</module>
         <module>portal-api/api</module>
-        <module>portal-assembly</module>
         <module>portal-charon/charon</module>
         <module>portal-chat/tool</module>
         <module>portal-impl/impl</module>
@@ -82,7 +81,7 @@
             <dependency>
                 <groupId>org.sakaiproject.metaobj</groupId>
                 <artifactId>sakai-metaobj-tool-lib</artifactId>
-                <version>2.10-SNAPSHOT</version>
+                <version>10.0-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>jtidy</groupId>
@@ -101,42 +100,4 @@
 			</dependency>
         </dependencies>
     </dependencyManagement>
-    
-    <reporting>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.8</version>
-                <configuration>
-                    <debug>true</debug>
-                    <links>
-                        <link>http://download.oracle.com/javase/1.5.0/docs/api/</link>
-                        <link>http://download.oracle.com/javase/6/docs/api/</link>
-                    </links>
-                    <breakiterator>true</breakiterator>
-                    <verbose>false</verbose>
-                    <aggregate>true</aggregate>
-                    <minmemory>168m</minmemory>
-                    <maxmemory>1024m</maxmemory>
-                    <additionalJOption>-J-Xms168m -J-Xmx1024m -J-XX:PermSize=128m -J-XX:NewSize=64m</additionalJOption>
-                </configuration>
-            </plugin>
-        </plugins>
-    </reporting>
-    
-    <repositories> 
-		<repository> 
-			<id>sonatype-nexus-snapshots</id> 
-			<name>Sonatype Nexus Snapshots</name> 
-			<url> https://oss.sonatype.org/content/repositories/snapshots </url> 
-			<releases> 
-				<enabled>false</enabled> 
-			</releases> 
-			<snapshots> 
-				<enabled>true</enabled> 
-			</snapshots> 
-		</repository> 
-	</repositories>
-	
 </project>
